Modul 7.4 Order homework - update